[gd_scene load_steps=3 format=3 uid="uid://bpxc0j5egg51a"]

[ext_resource type="Script" uid="uid://odntiw3msdaw" path="res://scenes/waste/waste.gd" id="1_4o30g"]
[ext_resource type="Texture2D" uid="uid://53lt3bv2vhru" path="res://assets/sprites/entitles/waste.png" id="2_gqhc4"]

[node name="waste" type="Node2D"]
z_index = 3
script = ExtResource("1_4o30g")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_gqhc4")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 38

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(0, -32, 13, -31, 32, -20, 48, -3, 60, 20, 64, 32, -64, 33, -60, 19, -47, -5, -31, -21, -13, -31)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(98, 2)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
